# contest-greeter

./: .gitignore  CONFIG.md  Cargo.toml  README.md  contest-greeter.toml  flake.nix  install.sh  shell.nix  test_server.py
.github/workflows/: build.yaml
contest-greeter-dbus/: Cargo.toml
contest-greeter-dbus/src/: lib.rs
nix/: module.nix  package.nix
src/: bus.rs  conf.rs  contest_api.rs  ipc.rs  lib.rs  main.rs  subscriptions.rs  ui.rs
src/greeter/: mod.rs
src/greeter/lightdm/: mod.rs  sys.rs
src/ipc/: greeter_client.rs  sessions.rs
src/subscriptions/: api_poller.rs  dbus.rs  key_listener.rs
src/ui/: background.rs  chain_listener.rs  config.rs  countdown.rs  form.rs  ip_label.rs  login_ui.rs  mod.rs
tools/: config_docs.rs
types/: Cargo.toml
types/src/: bus.rs  lib.rs  messages.rs
