[workspace]
members = [".", "types"]

[package]
name = "lightdm-contest-rs-greeter"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
libc = "0.2"
glib-sys = "0.20"
gio-sys = "0.20"
gobject-sys = "0.20"
gio = "0.20"
gtk4 = "0.10.2"
types = { path = "./types" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[build-dependencies]
pkg-config = "0.3"
